Employee responsiveness is ready

--- a/app/app.employee.html
+++ b/app/app.employee.html
@@ -1,1 +1,128 @@
-Novo Colaborador
+<form [formGroup]="employeeForm" (ngSubmit)="onSubmitEmployee(employeeForm.value)">
+    <div class="ui-g">
+        <div class="ui-g-12 ui-md-6 ui-lg-6">
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Colaborador</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
+                    maxlength="128" />
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Matrícula</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
+                    maxlength="128" />
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Matrícula Completa</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
+                    maxlength="128" />
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Login de Telefonia</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
+                    maxlength="128" />
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Data Admissão Empresa</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
+                    maxlength="128" />
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Data Admissão Área</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
+                    maxlength="128" />
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Estado</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
+                    maxlength="128" />
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Cidade</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
+                    maxlength="128" />
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Cargo</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
+                    maxlength="128" />
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Carga Horária</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
+                    maxlength="128" />
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Horário de Entrada</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
+                    maxlength="128" />
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Horário de Saída</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
+                    maxlength="128" />
+            </div>
+        </div>
+        <div class="ui-g-12 ui-md-6 ui-lg-6">
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Situação</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
+                    maxlength="128" />
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Data Final</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
+                    maxlength="128" />
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Diretor</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
+                    maxlength="128" />
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Gerente SR</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
+                    maxlength="128" />
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Gerente</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
+                    maxlength="128" />
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Coodernador</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
+                    maxlength="128" />
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Supervisor</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
+                    maxlength="128" />
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Grupo</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
+                    maxlength="128" />
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Entre Grupo</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
+                    maxlength="128" />
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Data de Nascimento</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
+                    maxlength="128" />
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">CPF</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
+                    maxlength="128" />
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Cadastrar</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
+                    maxlength="128" />
+            </div>
+        </div>
+    </div>
+</form>
