--- a/app/app.employee.html
+++ b/app/app.employee.html
@@ -8,13 +8,12 @@
             </div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">Matrícula</div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
+                <input type="number" min="0" pInputText formControlName="matriculaInput" [(ngModel)]="matricula" style="text-transform: uppercase"
                     maxlength="128" />
             </div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">Matrícula Completa</div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
-                    maxlength="128" />
+                <p-inputMask mask="a9999999" formControlName="matrComplInput" [(ngModel)]="matrCompl" [style]="{'text-transform':'uppercase'}"></p-inputMask>
             </div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">Login de Telefonia</div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">
