--- a/app/app.employee.html
+++ b/app/app.employee.html
@@ -3,124 +3,103 @@
         <div class="ui-g-12 ui-md-6 ui-lg-6">
             <div class="ui-g-12 ui-md-6 ui-lg-6">Colaborador</div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
-                    maxlength="128" />
-            </div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">Matrícula</div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <input type="number" min="0" pInputText formControlName="matriculaInput" [(ngModel)]="matricula" style="text-transform: uppercase"
-                    maxlength="128" />
-            </div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">Matrícula Completa</div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <p-inputMask mask="a9999999" formControlName="matrComplInput" [(ngModel)]="matrCompl" [style]="{'text-transform':'uppercase'}"></p-inputMask>
-            </div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">Login de Telefonia</div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
-                    maxlength="128" />
-            </div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">Data Admissão Empresa</div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
-                    maxlength="128" />
-            </div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">Data Admissão Área</div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
-                    maxlength="128" />
-            </div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">Estado</div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
-                    maxlength="128" />
-            </div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">Cidade</div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
-                    maxlength="128" />
-            </div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">Cargo</div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
-                    maxlength="128" />
-            </div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">Carga Horária</div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
-                    maxlength="128" />
-            </div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">Horário de Entrada</div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
-                    maxlength="128" />
-            </div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">Horário de Saída</div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
-                    maxlength="128" />
-            </div>
-        </div>
-        <div class="ui-g-12 ui-md-6 ui-lg-6">
-            <div class="ui-g-12 ui-md-6 ui-lg-6">Situação</div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
-                    maxlength="128" />
-            </div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">Data Final</div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
-                    maxlength="128" />
-            </div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">Diretor</div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
-                    maxlength="128" />
-            </div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">Gerente SR</div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
-                    maxlength="128" />
-            </div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">Gerente</div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
-                    maxlength="128" />
-            </div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">Coodernador</div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
-                    maxlength="128" />
-            </div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">Supervisor</div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
-                    maxlength="128" />
-            </div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">Grupo</div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
-                    maxlength="128" />
-            </div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">Entre Grupo</div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
-                    maxlength="128" />
-            </div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">Data de Nascimento</div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
+                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase; width:100%; width:100%"
                     maxlength="128" />
             </div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">CPF</div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
+                <p-inputMask mask="999.999.999-99" formControlName="cpfInput" [(ngModel)]="cpf" [style]="{'text-transform':'uppercase', 'width':'100%'}"></p-inputMask>
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Data de Nascimento</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <p-inputMask mask="99/99/9999" formControlName="dtNascInput" [(ngModel)]="dtNasc" [style]="{'text-transform':'uppercase', 'width':'100%'}"></p-inputMask>
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Matrícula</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <input type="number" min="0" pInputText formControlName="matriculaInput" [(ngModel)]="matricula" style="text-transform: uppercase; width:100%; width:100%"
                     maxlength="128" />
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Matrícula Completa</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <p-inputMask mask="a9999999" formControlName="matrComplInput" [(ngModel)]="matrCompl" [style]="{'text-transform':'uppercase', 'width':'100%'}"></p-inputMask>
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Login de Telefonia</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <input type="number" min="0" pInputText formControlName="loginTelInput" [(ngModel)]="loginTel" style="text-transform: uppercase; width:100%"
+                    maxlength="128" />
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Data Admissão Empresa</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <p-inputMask mask="99/99/9999" formControlName="dtAdmEmpresaInput" [(ngModel)]="dtAdmEmpresa" [style]="{'text-transform':'uppercase', 'width':'100%'}"></p-inputMask>
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Data Admissão Área</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <p-inputMask mask="99/99/9999" formControlName="dtAdmAreaInput" [(ngModel)]="dtAdmArea" [style]="{'text-transform':'uppercase', 'width':'100%'}"></p-inputMask>
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Estado</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <p-dropdown [options]="estadoSelectItem" [(ngModel)]="estado" formControlName="estadoInput" [filter]="true" [style]="{'text-transform':'uppercase', 'width':'100%'}"></p-dropdown>
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Cidade</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <p-dropdown [options]="cidadeSelectItem" [(ngModel)]="cidade" formControlName="cidadeInput" [filter]="true" [style]="{'text-transform':'uppercase', 'width':'100%'}"></p-dropdown>
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Cargo</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <p-dropdown [options]="cargoSelectItem" [(ngModel)]="cargo" formControlName="cargoInput" [filter]="true" [style]="{'text-transform':'uppercase', 'width':'100%'}"></p-dropdown>
+            </div>
+        </div>
+        <div class="ui-g-12 ui-md-6 ui-lg-6">
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Carga Horária</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <p-dropdown [options]="cargaHorariaSelectItem" [(ngModel)]="cargaHoraria" formControlName="cargaHorariaInput" [filter]="true"
+                    [style]="{'text-transform':'uppercase', 'width':'100%'}"></p-dropdown>
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Horário de Entrada</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <p-inputMask mask="99:99" formControlName="hrEntradaInput" [(ngModel)]="hrEntrada" [style]="{'text-transform':'uppercase', 'width':'100%'}"></p-inputMask>
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Situação</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <p-dropdown [options]="situacaoNovoSelectItem" [(ngModel)]="situacaoNovo" formControlName="situacaoNovoInput" [filter]="true"
+                    [style]="{'text-transform':'uppercase', 'width':'100%'}"></p-dropdown>
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Data Final</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <p-inputMask mask="99/99/9999" formControlName="dtFinalInput" [(ngModel)]="dtFinal" [style]="{'text-transform':'uppercase', 'width':'100%'}"></p-inputMask>
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Diretor</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <p-dropdown [options]="diretorSelectItem" [(ngModel)]="diretor" formControlName="diretorInput" [filter]="true" [style]="{'text-transform':'uppercase', 'width':'100%'}"></p-dropdown>
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Gerente SR</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <p-dropdown [options]="gerenteSrSelectItem" [(ngModel)]="gerenteSr" formControlName="gerenteSrInput" [filter]="true" [style]="{'text-transform':'uppercase', 'width':'100%'}"></p-dropdown>
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Gerente</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <p-dropdown [options]="gerenteSelectItem" [(ngModel)]="gerente" formControlName="gerenteInput" [filter]="true" [style]="{'text-transform':'uppercase', 'width':'100%'}"></p-dropdown>
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Coodernador</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <p-dropdown [options]="coordenadorSelectItem" [(ngModel)]="coordenador" formControlName="coordenadorInput" [filter]="true"
+                    [style]="{'text-transform':'uppercase', 'width':'100%'}"></p-dropdown>
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Supervisor</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <p-dropdown [options]="supervisorSelectItem" [(ngModel)]="supervisor" formControlName="supervisorInput" [filter]="true" [style]="{'text-transform':'uppercase', 'width':'100%'}"></p-dropdown>
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Grupo</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <p-dropdown [options]="grupoSelectItem" [(ngModel)]="grupo" formControlName="grupoInput" [filter]="true" [style]="{'text-transform':'uppercase', 'width':'100%'}"></p-dropdown>
+            </div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">Entre Grupo</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6">
+                <p-dropdown [options]="entreGrupoSelectItem" [(ngModel)]="entreGrupo" formControlName="entreGrupoInput" [filter]="true" [style]="{'text-transform':'uppercase', 'width':'100%'}"></p-dropdown>
             </div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">Cadastrar</div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase"
-                    maxlength="128" />
+                <button pButton type="submit" pButton icon="fa-save" label="Cadastrar" style="width:100%"></button>
             </div>
         </div>
     </div>
