--- a/app/app.employee.html
+++ b/app/app.employee.html
@@ -3,8 +3,8 @@
         <div class="ui-g-12 ui-md-6 ui-lg-6">
             <div class="ui-g-12 ui-md-6 ui-lg-6">Colaborador</div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <input type="text" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador" style="text-transform: uppercase; width:100%; width:100%"
-                    maxlength="128" />
+                <input type="text" (keyup)="colaboradorValidation($event)" pInputText formControlName="colaboradorInput" [(ngModel)]="colaborador"
+                    style="text-transform: uppercase; width:100%; width:100%" maxlength="128" />
             </div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">CPF</div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">
@@ -12,12 +12,12 @@
             </div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">Data de Nascimento</div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <p-inputMask mask="99/99/9999" formControlName="dtNascInput" [(ngModel)]="dtNasc" [style]="{'text-transform':'uppercase', 'width':'100%'}"></p-inputMask>
+                <p-inputMask mask="99/99/9999" (onComplete)="dtNascValidation()" formControlName="dtNascInput" [(ngModel)]="dtNasc" [style]="{'text-transform':'uppercase', 'width':'100%'}"></p-inputMask>
             </div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">Matrícula</div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <input type="number" min="0" pInputText formControlName="matriculaInput" [(ngModel)]="matricula" style="text-transform: uppercase; width:100%; width:100%"
-                    maxlength="128" />
+                <input type="text" (keyup)="matriculaValidation($event)" pInputText formControlName="matriculaInput" [(ngModel)]="matricula"
+                    style="text-transform: uppercase; width:100%; width:100%" maxlength="7" />
             </div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">Matrícula Completa</div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">
@@ -25,8 +25,8 @@
             </div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">Login de Telefonia</div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <input type="number" min="0" pInputText formControlName="loginTelInput" [(ngModel)]="loginTel" style="text-transform: uppercase; width:100%"
-                    maxlength="128" />
+                <input type="text" (keyup)="loginTelValidation($event)" pInputText formControlName="loginTelInput" [(ngModel)]="loginTel"
+                    style="text-transform: uppercase; width:100%" maxlength="7" />
             </div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">Data Admissão Empresa</div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">
@@ -97,7 +97,7 @@
             <div class="ui-g-12 ui-md-6 ui-lg-6">
                 <p-dropdown [options]="entreGrupoSelectItem" [(ngModel)]="entreGrupo" formControlName="entreGrupoInput" [filter]="true" [style]="{'text-transform':'uppercase', 'width':'100%'}"></p-dropdown>
             </div>
-            <div class="ui-g-12 ui-md-6 ui-lg-6">Cadastrar</div>
+            <div class="ui-g-12 ui-md-6 ui-lg-6"></div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">
                 <button pButton type="submit" pButton icon="fa-save" label="Cadastrar" style="width:100%"></button>
             </div>
