--- a/app/app.employee.html
+++ b/app/app.employee.html
@@ -95,7 +95,8 @@
             </div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">Grupo</div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">
-                <p-dropdown [options]="grupoSelectItem" [(ngModel)]="grupo" formControlName="grupoInput" [filter]="true" [style]="{'text-transform':'uppercase', 'width':'100%'}"></p-dropdown>
+                <p-dropdown [options]="grupoSelectItem" (onChange)="grupoChange()" [(ngModel)]="grupo" formControlName="grupoInput" [filter]="true"
+                    [style]="{'text-transform':'uppercase', 'width':'100%'}"></p-dropdown>
             </div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">Entre Grupo</div>
             <div class="ui-g-12 ui-md-6 ui-lg-6">
